app/index.scss
@import "../styles/layout";
@import "../styles/typography";
@import "../styles/theme-solid";
@import "../styles/theme-material";
@import "../lib/colors.scss";
@import "../lib/units.scss";

.undefined {
    color: map-get($color-danger, 0);
    background-color: map-get($color-danger, 0);
    border-color: map-get($color-danger, 0);
}

body {
    background: map-get($color-demo, 2);
    font-family: Roboto;
    margin: 0;
}

h1, p, a {
    color: #fff;
}

h2 {
    align-items: flex-end;
    background: map-get($color-demo, 2);
    display: flex;
    height: 96px;
    justify-content: center;
    margin: 0;

    span {
        background-color: map-get($color-demo, 4);
        line-height: 1em;
        margin-bottom: 1px;
        padding: 12px 24px;
        text-shadow: 0 1px 0 #fff;
    }
}

.columns {
    background-color: map-get($color-demo, 4);
    display: flex;
    flex-direction: row;
    padding: 12px 0;
}

.box {
    background: map-get($color-demo, 5);
    padding: 8px;
}


.theme {
    flex-basis: 0;
    flex-grow: 1;
    margin: 4px;
    background-color: map-get($color-demo, 5);


    h3 {
        background-color: map-get($color-demo, 4);
        font-size: $mmf-font-small;
        margin: 0;
        color: map-get($color-demo, 0);
        text-align: center;
    }

    h4 {
        margin: 0;
        padding: 24px 0 12px 8px;
        font-weight: normal;
        color: map-get($color-demo, 1);
        font-size: $mmf-font-small;
        border-top: 2px $mmf-style--border map-get($color-demo, 4);
        text-align: center;
        font-style: italic;
    }
}

